<resources>
    <string name="app_name">FGCUHousing</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_resident_access">ResidentAccess</string>
    <string name="title_activity_resident_register">ResidentRegister</string>
    <string name="title_activity_resident_login">ResidentLogin</string>
    <string name="title_activity_evest_list">EvestList</string>

    <string-array name="spinner_housing_options">
        <item name="no_filter">All</item>
        <item name="south_lake">South Lake Village</item>
        <item name="north_lake">North Lake Village</item>
        <item name="west_lake">West Lake Village</item>
    </string-array>
    <string name="title_activity_event_list">EventList</string>
    <string name="event_1">Event 1</string>
    <string name="search">Search</string>
    <string name="resident">Resident</string>
    <string name="select_type_of_user">Select type of user</string>
    <string name="staff">Staff</string>
    <string name="title_activity_event_page">EventPage</string>
    <string name="title_activity_rating_page">RatingPage</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_events__main">Events_Main</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_resident_account">ResidentAccount</string>
    <string name="title_activity_awards">Awards</string>
    <string name="title_activity_event_manager">EventManager</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="event_manager">Event Manager</string>
    <string name="event_name">Event name</string>
    <string name="_1">1</string>
    <string name="create_event">Create event</string>
    <string name="confirm">Confirm</string>
    <string name="create_new_event">Create new event</string>
    <string name="event_building">Event building</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="event_title">Event title:</string>
    <string name="insert_poster">Insert Poster</string>
    <string name="string_insert_poster" />
    <string name="managermode">ManagerMode</string>
    <string name="imageDescription">Go to 3 events!</string>
    <string name="AwardName">FlooTheCoop</string>
    <string name="AwardInfoTitle">Tiger Award</string>
    <string name="awardInfoDescription">Description of the Award and how to get I wonder how many characters will show on this because Some migh thave a very long description but i doubt it for now so lets see.</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter name</string>
    <string name="eagle_email">Eagle email:</string>
    <string name="enter_eagle_email">Enter eagle email</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="enter_password_verification">Enter password</string>
    <string name="building">Building:</string>
    <string name="enter_building">Enter Building</string>
    <string name="submit">Submit</string>
    <string name="title_activity_event_edit">event_edit</string>
    <string name="on_ward">On Ward</string>
    <string name="rate_event">Rate Event</string>
    <string name="title_activity_event_feedback">EventFeedback</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_stats">Stats</string>
</resources>
